<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_of_artical_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:padding="4dp"
        android:textColor="@android:color/black"
        android:text="@string/title_of_the_artical"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/section_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_of_artical_tv"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:gravity="left"
        android:text="@string/secction_name"
        android:textColor="#0BB2EB"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/section_name_tv"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif-light"
        android:gravity="left"
        android:text="@string/date"
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_tv"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif-light"
        android:gravity="right"
        android:text="@string/read_more"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/author_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_tv"
        android:layout_margin="4dp"
        android:fontFamily="sans-serif-light"
        android:gravity="left"
        android:text="@string/author_name"
        android:textStyle="normal" />

</RelativeLayout>